--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@apollo/client": "^3.7.3",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
-    "@mantine/core": "^5.9.5",
+    "@mantine/core": "^5.10.1",
     "@mantine/dates": "^5.10.0",
+    "@mantine/form": "^5.10.1",
     "@mantine/hooks": "^5.9.5",
     "@mantine/next": "^5.9.5",
     "@mantine/prism": "^5.10.0",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.4",
     "@graphql-codegen/client-preset": "^1.2.6",
+    "@types/eslint": "8.4.10",
     "autoprefixer": "^10.4.13",
     "eslint-plugin-tailwindcss": "^3.7.1",
     "postcss": "^8.4.20",
