--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.4",
     "@graphql-codegen/client-preset": "^1.2.6",
+    "@graphql-codegen/typescript": "^2.8.7",
+    "@graphql-codegen/typescript-operations": "^2.5.12",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/eslint": "8.4.10",
     "autoprefixer": "^10.4.13",
     "eslint-plugin-tailwindcss": "^3.7.1",
