--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/form": "^5.10.1",
     "@mantine/hooks": "^5.9.5",
     "@mantine/next": "^5.9.5",
+    "@mantine/notifications": "^5.10.2",
     "@mantine/prism": "^5.10.0",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
